# sdc-c6-control-starter

./: .gitignore  steer_pid_data.txt  throttle_pid_data.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: SESSION_CONTEXT.md  copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
project/: REPORT.md  plot_pid.py  run_main_pid.sh  simulatorAPI.py  steer_pid_data.txt  test_avoidance_pid.py  test_avoidance_scenario.py  test_collision_avoidance_300m.py  test_lane_change_pid.py  test_npc_placement.py  test_slalom_pid.py  throttle_pid_data.txt  twiddle_tune.py
project/pid_controller/: ANSWERS.md  CMakeCache.txt  CMakeLists.txt  Makefile  answers.txt  cmake_install.cmake  main.cpp  motion_planner.cpp  pid_controller  pid_controller.cpp  pid_controller.h  planning_params.h
project/pid_controller/carla/client/: Actor.h  ActorBlueprint.h  BlueprintLibrary.h  Client.h  Map.h  Sensor.h  TimeoutException.h  Vehicle.h  Waypoint.h  World.h
project/pid_controller/carla/geom/: Location.h  Rotation.h  Transform.h  Vector3D.h
project/pid_controller/carla/image/: ImageIO.h  ImageView.h
project/pid_controller/carla/road/: RoadTypes.h
project/pid_controller/carla/sensor/data/: Image.h
project/pid_controller/tests/: pid_test  pid_test.cpp
